--- a/test/support/lib/dummy_web/templates/layout/app.html.eex
+++ b/test/support/lib/dummy_web/templates/layout/app.html.eex
@@ -1,1 +1,1 @@
-<%= render @view_module, @view_template, assigns %>
+<%= render Phoenix.Controller.view_module(@conn), Phoenix.Controller.view_template(@conn), assigns %>
